[package]
name = "minecrafthax"
version = "0.1.0"
authors = ["sycration"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rayon = "1.3.1"
minreq = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"